# rust-clean_arch

./: Cargo.toml
api-rest/: Cargo.toml
authentication/src/: main.rs
cli/: Cargo.toml
cli/src/: cli.rs  create_organization.rs  main.rs
core-database/: Cargo.toml
core-database/sqlite-migrations/: 20230620002400_setupdb.down.sql  20230620002400_setupdb.up.sql
core-database/src/: entities.rs  lib.rs  main.rs  sqlite.rs  traits.rs
core-database/src/entities/: admin.rs  organization.rs  product.rs  sales.rs  seller.rs
