[package]
name = "core-database"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3.2", features = ["v4"] }
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls", "uuid", "chrono"] }
chrono = "0.4.24"
num-bigint = "0.4.3"
